tester/testsuite/good/core034.jl
int main() {
    printInt(-add(2,3));
    printInt(-(4*-3) + -(-2));
    return 0;
}

int add(int x, int y) {
    return x+y;
}
