tester/testsuite/bad/bad013.jl
int main() {
      double x ;
      x = 2 * 3.14 ;
      return 0 ;
}
